added links between hello and goodby pages

--- a/greeting/app/views/say/goodbye.html.erb
+++ b/greeting/app/views/say/goodbye.html.erb
@@ -1,2 +1,5 @@
-<h1>Say#goodbye</h1>
-<p>Find me in app/views/say/goodbye.html.erb</p>
+<h1>Goodbye!</h1>
+<p>It was nice seeing you.</p>
+<p>
+  Need to go back? <%= link_to "hello!", say_hello_path %>
+</p>
