--- a/squirrel-daycare/app/views/pages/index.html.erb
+++ b/squirrel-daycare/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Pages#index</h1>
-<p>Find me in app/views/pages/index.html.erb</p>
+<h1>Squirrel Daycare</h1>
+<p>A daycare only for squirrels!</p>
 
-<img src="app/assets/images/happy-squirrel.jpg">
+<%= image_tag("happy-squirrel.jpg") %>
