edited the squirrel form

--- a/squirrel-daycare/app/views/squirrels/show.html.erb
+++ b/squirrel-daycare/app/views/squirrels/show.html.erb
@@ -15,5 +15,10 @@
   <%= @squirrel.age %>
 </p>
 
+<p>
+  <strong>Owner:</strong>
+  <%= @squirrel.owner %>
+</p>
+
 <%= link_to 'Edit', edit_squirrel_path(@squirrel) %> |
 <%= link_to 'Back', squirrels_path %>
