--- a/squirrel-daycare/app/views/squirrels/_form.html.erb
+++ b/squirrel-daycare/app/views/squirrels/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :age %><br>
     <%= f.number_field :age %>
   </div>
+  <div class="field">
+    <%= f.label :owner %><br>
+    <%= f.text_field :owner %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
