--- a/squirrel-daycare/app/views/squirrels/index.html.erb
+++ b/squirrel-daycare/app/views/squirrels/index.html.erb
@@ -1,33 +1,45 @@
-<p id="notice"><%= notice %></p>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+  
+  
+      <p id="notice"><%= notice %></p>
 
-<h1>Listing Squirrels</h1>
+      <h1>Squirrels Squirrels Squirrels</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Name</th>
-      <th>Breed</th>
-      <th>Age</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Breed</th>
+            <th>Age</th>
+            <th>Owner</th>
+            <th colspan="3"></th>
+          </tr>
+        </thead>
 
-  <tbody>
-    <% @squirrels.each do |squirrel| %>
-      <tr>
-        <td><%= squirrel.id %></td>
-        <td><%= squirrel.name %></td>
-        <td><%= squirrel.breed %></td>
-        <td><%= squirrel.age %></td>
-        <td><%= link_to 'Show', squirrel %></td>
-        <td><%= link_to 'Edit', edit_squirrel_path(squirrel) %></td>
-        <td><%= link_to 'Destroy', squirrel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+          <% @squirrels.each do |squirrel| %>
+            <tr>
+              <td><%= squirrel.id %></td>
+              <td><%= squirrel.name %></td>
+              <td><%= squirrel.breed %></td>
+              <td><%= squirrel.age %></td>
+              <td><%= squirrel.owner %></td>
+              <td><%= link_to 'Show', squirrel %></td>
+              <td><%= link_to 'Edit', edit_squirrel_path(squirrel) %></td>
+              <td><%= link_to 'Destroy', squirrel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
 
-<br>
+      <br>
 
-<%= link_to 'New Squirrel', new_squirrel_path %>
+      <%= link_to 'New Squirrel', new_squirrel_path %>
+
+  </body>
+</html>
