--- a/blog/app/views/posts/index.html.erb
+++ b/blog/app/views/posts/index.html.erb
@@ -5,6 +5,14 @@
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
+
+  <!-- Custom stylesheets -->
+  <link rel="stylesheet" href="/assets/application.css" type="text/css">
+  <link rel="stylesheet" href="/assets/scaffolds.scss" type="text/css">
+  <link rel="stylesheet" href="/assets/posts.scss" type="text/css">
+
+
+
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
@@ -14,22 +22,22 @@
 
     <h1>Listing Posts</h1>
 
-    <table>
-      <thead>
-        <tr>
-          <th>Blog Post</th>
-          <th>Content</th>
-          <th>Author</th>
-          <th colspan="3"></th>
+    <table class="table">
+      <thead class="table-bordered">
+        <tr class="container">
+          <th class="col-md-1">Blog Post</th>
+          <th class="col-md-8">Content</th>
+          <th class="col-md-1">Author</th>
+          <th colspan="3">Options</th>
         </tr>
       </thead>
 
-      <tbody>
+      <tbody class="table">
         <% @posts.each do |post| %>
-          <tr>
-            <td><%= post.blog_title %></td>
-            <td><%= post.content %></td>
-            <td><%= post.author %></td>
+          <tr class="container">
+            <td class="col-md-1"><%= post.blog_title %></td>
+            <td class="col-md-8"><%= post.content %></td>
+            <td class="col-md-1"><%= post.author %></td>
             <td><%= link_to 'Show', post %></td>
             <td><%= link_to 'Edit', edit_post_path(post) %></td>
             <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -39,6 +47,8 @@
     </table>
 
     <br>
+
+    <%= @present_date %>
 
     <%= link_to 'New Post', new_post_path %>
   </div>
