--- a/squirrel-daycare/app/views/squirrels/show.html.erb
+++ b/squirrel-daycare/app/views/squirrels/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Owner:</strong>
-  <%= @squirrel.owner %>
+  <%= @squirrel.try(:owner).try(:name) %>
 </p>
 
 <%= link_to 'Edit', edit_squirrel_path(@squirrel) %> |
