--- a/squirrel-daycare/app/views/squirrels/index.html.erb
+++ b/squirrel-daycare/app/views/squirrels/index.html.erb
@@ -9,7 +9,7 @@
 
       <h1>Squirrels Squirrels Squirrels</h1>
 
-      <table>
+      <table class="table table-striped table-hover">
         <thead>
           <tr>
             <th>ID</th>
