added features to the views

--- a/music_db/app/views/genres/index.html.erb
+++ b/music_db/app/views/genres/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Genres</h1>
+<h1>Genres</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
