--- a/music_db/app/views/artists/index.html.erb
+++ b/music_db/app/views/artists/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Artists</h1>
+<h1>Artists</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -12,10 +12,10 @@
   </thead>
 
   <tbody>
-    <% @artists.each do |artist| %>
+    <% @artists.order('name').each do |artist| %>
       <tr>
         <td><%= artist.name %></td>
-        <td><%= artist.genre %></td>
+        <td><%= artist.genre.name %></td>
         <td><%= link_to 'Show', artist %></td>
         <td><%= link_to 'Edit', edit_artist_path(artist) %></td>
         <td><%= link_to 'Destroy', artist, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Artist', new_artist_path %>
+<%= link_to 'New Artist', new_artist_path, class: 'btn btn-info' %>
