--- a/music_db/app/views/artists/show.html.erb
+++ b/music_db/app/views/artists/show.html.erb
@@ -1,14 +1,15 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @artist.name %>
-</p>
+<h2> Songs by <%= @artist.name.capitalize %>
+<br>
+<small><%= @artist.genre.name.capitalize %></small></h2>
 
-<p>
-  <strong>Genre:</strong>
-  <%= @artist.genre %>
-</p>
+<ul>
+<% @artist.songs.each do |song| %>
+  <li><%= song.name %></li>
+<% end %>
+</ul>
+
 
 <%= link_to 'Edit', edit_artist_path(@artist) %> |
 <%= link_to 'Back', artists_path %>
