--- a/music_db/app/views/songs/_form.html.erb
+++ b/music_db/app/views/songs/_form.html.erb
@@ -17,9 +17,9 @@
   </div>
   <div class="field">
     <%= f.label :artist_id %><br>
-    <%= f.text_field :artist_id %>
+    <%= f.collection_select :artist_id, Artist.all, :id, :name %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit class: "btn btn-info" %>
   </div>
 <% end %>
