--- a/music_db/app/views/artists/_form.html.erb
+++ b/music_db/app/views/artists/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :genre_id %><br>
     <%= f.collection_select :genre_id, Genre.all, :id, :name, {prompt: "Select a Genre"}, {class: "form-control"} %>
   </div>
+
+
+  <div class="field">
+    <%= f.label :bio %><br>
+    <%= f.text_field :bio, class: 'form-control', placeholder: 'Enter Bio here' %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit class: "btn btn-info" %>
   </div>
