--- a/music_db/app/views/artists/show.html.erb
+++ b/music_db/app/views/artists/show.html.erb
@@ -10,6 +10,9 @@
 <% end %>
 </ul>
 
+<h3>Bio:</h3>
+<p><%= @artist.bio %></p>
+
 
 <%= link_to 'Edit', edit_artist_path(@artist) %> |
 <%= link_to 'Back', artists_path %>
